--- a/MiniProject1_Jeong.vcxproj.filters
+++ b/MiniProject1_Jeong.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="GenericHandler.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="GetInteger.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -42,6 +45,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="GenericHandler.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="GetInteger.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Line.h">
