--- a/MiniProject1_Jeong.vcxproj.filters
+++ b/MiniProject1_Jeong.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Product.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ProductHandler.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
     <ClCompile Include="SalesHistory.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -54,6 +57,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Product.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ProductHandler.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="SalesHistory.h">
